--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint src/**/*.ts --fix",
+    "format": "prettier --write \"src/**/*.ts\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "keywords": [],
   "author": "",
@@ -15,6 +22,11 @@
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "eslint": "^8.34.0",
+    "husky": "^8.0.3",
+    "prettier": "^2.8.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
