--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,7 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=postgres
-POSTGRES_DB=online_payment
-PGADMIN_DEFAULT_EMAIL=admin@admin.com
-PGADMIN_DEFAULT_PASSWORD=admin
-APPLICATION_PORT=5000
+POSTGRES_USER=<-add postgres user->
+POSTGRES_PASSWORD=<-add postgres password->
+POSTGRES_HOST=<-add postgres host->
+POSTGRES_DB=<-add postgres dbname->
 
 PAYSTACK_SECRET_KEY=<-add paystack secret->
 PAYSTACK_BASE_URL=https://api.paystack.co
